Add apikey into appsetttings.json

--- a/Movies.Web/appsettings.json
+++ b/Movies.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MovieApi": {
+    "ApiKey": "4f731024"
+  }
 }
